--- a/index.ipynb
+++ b/index.ipynb
@@ -1,1 +1,131 @@
-{"cells": [{"cell_type": "markdown", "metadata": {}, "source": ["# Obtaining Your Data - Lab"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Introduction\n", "In this lab you'll practice your munging and transforming skills in order to load in your data to solve a regression problem."]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Objectives\n", "You will be able to:\n", "* Understand the ETL process and the steps it consists of\n", "* Understand the challenges of working with data from multiple sources "]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Task Description\n", "\n", "You just got hired by Lego! Your first project is going to be to develop a pricing algorithm to help set a target price for new lego sets that are released to market. To do this, you're first going to need to start mining the company database in order to collect the information you need to develop a model.\n", "\n", "Start by investigating the database stored in lego.db and joining the tables into a unified dataset!\n", "\n", "> **Hint:** use this sql statement to preview the tables in an unknown database:\n", "```sql\n", "SELECT name FROM sqlite_master\n", "             WHERE type='table'\n", "             ORDER BY name;\n", "```"]}, {"cell_type": "code", "execution_count": null, "metadata": {"collapsed": true}, "outputs": [], "source": ["# Your code here"]}, {"cell_type": "markdown", "metadata": {}, "source": ["## Summary\n", "Nice work! You're working more and more independently through the workflow and ensuring data integrity!"]}], "metadata": {"kernelspec": {"display_name": "Python 3", "language": "python", "name": "python3"}, "language_info": {"codemirror_mode": {"name": "ipython", "version": 3}, "file_extension": ".py", "mimetype": "text/x-python", "name": "python", "nbconvert_exporter": "python", "pygments_lexer": "ipython3", "version": "3.6.5"}}, "nbformat": 4, "nbformat_minor": 2}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Obtaining Your Data - Lab"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "In this lab you'll practice your munging and transforming skills in order to load in your data to solve a regression problem."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objectives\n",
+    "You will be able to:\n",
+    "* Understand the ETL process and the steps it consists of\n",
+    "* Understand the challenges of working with data from multiple sources "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Task Description\n",
+    "\n",
+    "You just got hired by Lego! Your first project is going to be to develop a pricing algorithm to help set a target price for new lego sets that are released to market. To do this, you're first going to need to start mining the company database in order to collect the information you need to develop a model.\n",
+    "\n",
+    "Start by investigating the database stored in lego.db and joining the tables into a unified dataset!\n",
+    "\n",
+    "> **Hint:** use this sql statement to preview the tables in an unknown database:\n",
+    "```sql\n",
+    "SELECT name FROM sqlite_master\n",
+    "             WHERE type='table'\n",
+    "             ORDER BY name;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('product_details',),\n",
+       " ('product_info',),\n",
+       " ('product_pricing',),\n",
+       " ('product_reviews',)]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Your code here\n",
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "con = sqlite3.connect('lego.db')\n",
+    "#Create a cursor\n",
+    "cur = con.cursor()\n",
+    "#Select some data\n",
+    "result = cur.execute(\"\"\"SELECT name FROM sqlite_master WHERE type='table' ORDER BY name;\"\"\").fetchall()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (<ipython-input-4-575eb5144fd2>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-575eb5144fd2>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    length = cur.execute(\"\"\"\"SELECT count(*) FROM {};\"\"\"\".format(table).fetchall())\u001b[0m\n\u001b[0m                                                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in result:\n",
+    "    table = item[0]\n",
+    "    length = cur.execute(\"\"\"\"SELECT count(*) FROM {};\"\"\"\".format(table).fetchall())\n",
+    "    results = cur.execute(\"\"\"\"SELECT * FROM {};\"\"\"\".format(table).fetchall())\n",
+    "    df = pd.DataFrame(results)\n",
+    "    df.columns = [x for x in cur.description]\n",
+    "    print(table,length \\n\\ df \\n\\)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "Nice work! You're working more and more independently through the workflow and ensuring data integrity!"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
